# ConsoleMVC-HuiseongCho-23027114

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/controller/: ItemController.cpp  ItemController.h
src/model/: Item.cpp  Item.h
src/view/: ItemView.cpp  ItemView.h
test_result/: PoC1-Phase1_GREEN.txt  PoC1-Phase1_RED.txt  PoC1-Phase2_GREEN.txt  PoC1-Phase2_RED.txt  PoC1-Phase3_GREEN.txt  PoC1-Phase3_RED.txt  PoC1-Phase4_GREEN.txt  PoC1-Phase4_RED.txt  PoC1-Phase5_integration.txt
tests/: CMakeLists.txt  test_item.cpp  test_item_controller.cpp  test_item_view.cpp  test_placeholder.cpp
